@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-    Copyright (c) 2013 IBM Corporation and others.
+    Copyright (c) 2013, 2015 IBM Corporation and others.
     All rights reserved. This program and the accompanying materials
     are made available under the terms of the Eclipse Public License v1.0
     which accompanies this distribution, and is available at
@@ -14,11 +14,12 @@
 	<parent>
 		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
-		<version>1.480.3</version>
+		<version>1.580.1</version>
 	</parent>
 
+	<groupId>org.jenkins-ci.plugins</groupId>
 	<artifactId>teamconcert</artifactId>
-	<version>1.0.13-SNAPSHOT</version>
+	<version>1.1.9.8-SNAPSHOT</version>
 	<packaging>hpi</packaging>
 
 	<name>Team Concert Plugin</name>
@@ -30,7 +31,7 @@
 			<name>Eclipse Public License v1.0</name>
 			<comments>
 				/*******************************************************************************
-				 * Copyright (c) 2013 IBM Corporation and others.
+				 * Copyright (c) 2013, 2014 IBM Corporation and others.
 				 * All rights reserved. This program and the accompanying materials
 				 * are made available under the terms of the Eclipse Public License v1.0
 				 * which accompanies this distribution, and is available at
@@ -45,16 +46,12 @@
 
 	<developers>
 		<developer>
-			<id>nedgar</id>
-			<name>Nick Edgar</name>
+		    <id>clkkishore</id>
+		    <name>Krishna Kishore</name>
 		</developer>
 		<developer>
-			<id>heatherf</id>
-			<name>Heather Fraser-Dube</name>
-		</developer>
-		<developer>
-			<id>scowan</id>
-			<name>Scott Cowan</name>
+		    <id>lvaikunt</id>
+		    <name>Narasimhan Vaikuntam</name>
 		</developer>
 	</developers>
 
@@ -62,12 +59,17 @@
 		<connection>scm:git:https://github.com/jenkinsci/teamconcert-plugin.git</connection>
 		<developerConnection>scm:git:https://github.com/jenkinsci/teamconcert-plugin.git</developerConnection>
 		<url>https://github.com/jenkinsci/teamconcert-plugin</url>
-	</scm>
+	  <tag>HEAD</tag>
+  </scm>
 
 	<properties>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<project.build.outputEncoding>UTF-8</project.build.outputEncoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<buildtoolkitcurrent>${env.buildtoolkitcurrent}</buildtoolkitcurrent>
+		<buildtoolkit60>${env.buildtoolkit60}</buildtoolkit60>
+		<buildtoolkit502>${env.buildtoolkit502}</buildtoolkit502>
+		<buildtoolkit407>${env.buildtoolkit407}</buildtoolkit407>
 	</properties>
 
 	<!-- get every artifact through repo.jenkins-ci.org, which proxies all the 
@@ -94,12 +96,12 @@
 		<dependency>
 			<groupId>com.ibm.team.build</groupId>
 			<artifactId>com.ibm.team.build.hjplugin-rtc</artifactId>
-			<version>1.0.0</version>
+			<version>1.0.6</version>
 		</dependency>
 		<dependency>
 			<groupId>com.ibm.team.build</groupId>
 			<artifactId>com.ibm.team.build.hjplugin-rtc</artifactId>
-			<version>1.0.0</version>
+			<version>1.0.6</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
@@ -115,6 +117,22 @@
 			<version>1.8.5</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>credentials</artifactId>
+			<version>1.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins.workflow</groupId>
+			<artifactId>workflow-scm-step</artifactId>
+			<version>1.3</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -129,23 +147,115 @@
 						<phase>integration-test</phase>
 						<goals>
 							<goal>integration-test</goal>
-							<goal>verify</goal>
 						</goals>
 						<configuration>
+							<argLine>-XX:MaxPermSize=1024m -Xms2048m -Xmx3g -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:-HeapDumpOnOutOfMemoryError</argLine>
 							<systemPropertyVariables>
 								<com.ibm.team.build.configured>false</com.ibm.team.build.configured>
-								<com.ibm.team.build.toolkit>C:/Program Files (x86)/IBM/TeamConcertBuild/buildsystem/buildtoolkit</com.ibm.team.build.toolkit>
-								<com.ibm.team.build.serverURI>https://vottscowan.ottawa.ibm.com:9443/ccm</com.ibm.team.build.serverURI>
-								<com.ibm.team.build.userId>scowan</com.ibm.team.build.userId>
-								<com.ibm.team.build.password>scowan</com.ibm.team.build.password>
-								<com.ibm.team.build.passwordFile>C:/Users/scowan/.jenkins/scowan-password</com.ibm.team.build.passwordFile>
+								<com.ibm.team.build.toolkit>${buildtoolkitcurrent}</com.ibm.team.build.toolkit>
+								<com.ibm.team.build.serverURI>https://higgins.ottawa.ibm.com:9443/ccm</com.ibm.team.build.serverURI>
+								<com.ibm.team.build.userId>HJPluginTests</com.ibm.team.build.userId>
+								<com.ibm.team.build.password>HJPluginTests</com.ibm.team.build.password>
+								<com.ibm.team.build.userIdForAuthenticationFailures>HJPluginTestsFail</com.ibm.team.build.userIdForAuthenticationFailures>
+								<com.ibm.team.build.passwordFile>C:/Jenkins/HJPluginTests-password</com.ibm.team.build.passwordFile>
 								<com.ibm.team.build.timeout>480</com.ibm.team.build.timeout>
-								<com.ibm.team.build.buildWorkspace>compile-and-test Workspace3</com.ibm.team.build.buildWorkspace>
 							</systemPropertyVariables>
+							<summaryFile>target/failsafe-reports/failsafe-summary.xml</summaryFile>
 						</configuration>
 					</execution>
+					<execution>
+						<id>integration-test-60</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>integration-test</goal>
+						</goals>
+						<configuration>
+							<argLine>-XX:MaxPermSize=1024m -Xms2048m -Xmx3g -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:-HeapDumpOnOutOfMemoryError</argLine>
+							<systemPropertyVariables>
+								<com.ibm.team.build.configured>false</com.ibm.team.build.configured>
+								<com.ibm.team.build.toolkit>${buildtoolkit60}</com.ibm.team.build.toolkit>
+								<com.ibm.team.build.serverURI>https://higgins.ottawa.ibm.com:9443/ccm</com.ibm.team.build.serverURI>
+								<com.ibm.team.build.userId>HJPluginTests</com.ibm.team.build.userId>
+								<com.ibm.team.build.password>HJPluginTests</com.ibm.team.build.password>
+								<com.ibm.team.build.userIdForAuthenticationFailures>HJPluginTestsFail</com.ibm.team.build.userIdForAuthenticationFailures>
+								<com.ibm.team.build.passwordFile>C:/Jenkins/HJPluginTests-password</com.ibm.team.build.passwordFile>
+								<com.ibm.team.build.timeout>480</com.ibm.team.build.timeout>
+							</systemPropertyVariables>
+							<summaryFile>target/failsafe-reports/failsafe-summary-60.xml</summaryFile>
+						</configuration>
+					</execution>
+					
+					<execution>
+						<id>integration-test-502</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>integration-test</goal>
+						</goals>
+						<configuration>
+							<argLine>-XX:MaxPermSize=1024m -Xms2048m -Xmx3g -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:-HeapDumpOnOutOfMemoryError</argLine>
+							<systemPropertyVariables>
+								<com.ibm.team.build.configured>false</com.ibm.team.build.configured>
+								<com.ibm.team.build.toolkit>${buildtoolkit502}</com.ibm.team.build.toolkit>
+								<com.ibm.team.build.serverURI>https://higgins.ottawa.ibm.com:9443/ccm</com.ibm.team.build.serverURI>
+								<com.ibm.team.build.userId>HJPluginTests</com.ibm.team.build.userId>
+								<com.ibm.team.build.password>HJPluginTests</com.ibm.team.build.password>
+								<com.ibm.team.build.userIdForAuthenticationFailures>HJPluginTestsFail</com.ibm.team.build.userIdForAuthenticationFailures>
+								<com.ibm.team.build.passwordFile>C:/Jenkins/HJPluginTests-password</com.ibm.team.build.passwordFile>
+								<com.ibm.team.build.timeout>480</com.ibm.team.build.timeout>
+							</systemPropertyVariables>
+							<summaryFile>target/failsafe-reports/failsafe-summary-502.xml</summaryFile>
+						</configuration>
+					</execution>
+					
+					<execution>
+						<id>integration-test-407</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>integration-test</goal>
+						</goals>
+						<configuration>
+							<argLine>-XX:MaxPermSize=1024m -Xms2048m -Xmx3g -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:-HeapDumpOnOutOfMemoryError</argLine>
+							<systemPropertyVariables>
+								<com.ibm.team.build.configured>false</com.ibm.team.build.configured>
+								<com.ibm.team.build.toolkit>${buildtoolkit407}</com.ibm.team.build.toolkit>
+								<com.ibm.team.build.serverURI>https://higgins.ottawa.ibm.com:9443/ccm</com.ibm.team.build.serverURI>
+								<com.ibm.team.build.userId>HJPluginTests</com.ibm.team.build.userId>
+								<com.ibm.team.build.password>HJPluginTests</com.ibm.team.build.password>
+								<com.ibm.team.build.userIdForAuthenticationFailures>HJPluginTestsFail</com.ibm.team.build.userIdForAuthenticationFailures>
+								<com.ibm.team.build.passwordFile>C:/Jenkins/HJPluginTests-password</com.ibm.team.build.passwordFile>
+								<com.ibm.team.build.timeout>480</com.ibm.team.build.timeout>
+							</systemPropertyVariables>
+							<summaryFile>target/failsafe-reports/failsafe-summary-407.xml</summaryFile>
+						</configuration>
+					</execution>
+					<execution>
+			            <id>verify</id>
+			            <goals>
+			              <goal>verify</goal>
+			            </goals>
+			            <configuration>
+			              <summaryFiles>
+			                <summaryFile>target/failsafe-reports/failsafe-summary-407.xml</summaryFile>
+			                <summaryFile>target/failsafe-reports/failsafe-summary-502.xml</summaryFile>
+			                <summaryFile>target/failsafe-reports/failsafe-summary-60.xml</summaryFile>
+			                <summaryFile>target/failsafe-reports/failsafe-summary.xml</summaryFile>
+			              </summaryFiles>
+			            </configuration>
+          			</execution>
 				</executions>
 			</plugin>
+	        <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.1</version>
+                <dependencies>
+                   <dependency>
+                      <groupId>org.apache.maven.scm</groupId>
+                      <artifactId>maven-scm-provider-gitexe</artifactId>
+                      <version>1.9.2</version>
+                   </dependency>
+                </dependencies>
+            </plugin>
 		</plugins>
 	</build>
 </project>
